# Ahmednut

./: README.md
Nutaq/bas/: LaunchCLI.sh
Nutaq/bas/doc/cores/Aurora/: Aurora Programmer's Reference Guide.docx
Nutaq/bas/examples/aurora/host/scripts/: AuroraTest.sh  AuroraTestLoopback.sh  RtdexTestRx.ini  RtdexTestTx.ini  new_console_with_pause.sh
Nutaq/bas/examples/mi125/host/scripts/: HMC7044_125MHZ_CMOS_0_3_10_13.py  MI125_Init.ini  MI125_Init_64.ini  MI125_Record_32.sh  MI125_Record_64.sh
Nutaq/bas/examples/rtdex_recplay/host/scripts/: PlaybackTest.sh  RecordTest.sh  RecplayTestPlayback.ini  RecplayTestRecord.ini  RtdexRxTest.sh  RtdexTestDownlink.ini  RtdexTestUplink.ini  RtdexTxTest.sh  RxStreaming.ini  TxStreaming.ini
Nutaq/bas/sdk/embedded/cce/: cce.sh
Nutaq/bas/sdk/embedded/cce/inc/: bitstream.h  cce_adac250.h  cce_adc5000.h  cce_aurora.h  cce_carrier.h  cce_fmcomms3.h  cce_fmcvita.h  cce_io.h  cce_lvds.h  cce_lvdsxinxout.h  cce_mainloop.h  cce_mi125.h  cce_mi250.h  cce_mo1000.h  cce_osconfig.h  cce_ppssync.h  cce_radio420.h  cce_radio640.h  cce_rtdexsync.h  cce_sysmon.h  cce_timestamp.h  common_utils.h  hardware.h  mb_interface.h  utils.h  xbasic_types.h  xiic.h  xiic_i.h  xiic_l.h  xil_types.h  xio.h  xspi.h  xspi_i.h  xspi_l.h  xstatus.h
Nutaq/bas/sdk/embedded/cce/prj/: Makefile  checkout.sh  commit.sh  login.sh  logout.sh  readme.txt
Nutaq/bas/sdk/embedded/cce/src/: bitstream.c  cce_adac250.c  cce_adc5000.c  cce_aurora.c  cce_carrier.c  cce_fmcomms3.c  cce_fmcvita.c  cce_io.c  cce_lvds.c  cce_lvdsxinxout.c  cce_mainloop.c  cce_mi125.c  cce_mi250.c  cce_mo1000.c  cce_osconfig.c  cce_ppssync.c  cce_radio420.c  cce_radio640.c  cce_rtdexsync.c  cce_sysmon.c  cce_timestamp.c  common_utils.c  main.c  utils.c  xiic.c  xiic_dyn_master.c  xiic_g.c  xiic_intr.c  xiic_l.c  xiic_master.c  xiic_multi_master.c  xiic_options.c  xiic_selftest.c  xiic_sinit.c  xiic_slave.c  xiic_stats.c  xil_assert.c  xspi.c  xspi_options.c  xspi_selftest.c  (+1 more)
Nutaq/bas/sdk/embedded/lib/FMCEEprom_lib/inc/: FMCEEprom_def.h  FMCEEprom_eeprom.h  FMCEEprom_eeprom_cond.h  FMCEEprom_eeprom_def.h  FMCEEprom_eeprom_id.h  FMCEEprom_ifru.h  FMCEEprom_ifru_vita.h  FMCEEprom_ipicmg.h  FMCEEprom_ipmicmd.h  FMCEEprom_oldeeprom_def.h
Nutaq/bas/sdk/embedded/lib/FMCEEprom_lib/prj/: Makefile
Nutaq/bas/sdk/embedded/lib/FMCEEprom_lib/src/: FMCEEprom_eeprom.c  FMCEEprom_ifru.c  FMCEEprom_subs.c  FMCEEprom_vita.c
Nutaq/bas/sdk/embedded/lib/adac250_lib/inc/: adac250.h  adac250_defines.h  adac250_ioctl.h  adac250_pll.h  adac250_serialize.h  adac250_types.h  adac250_user.h
Nutaq/bas/sdk/embedded/lib/adac250_lib/prj/: Makefile
Nutaq/bas/sdk/embedded/lib/adac250_lib/src/: adac250.c  adac250_adc.c  adac250_dac.c  adac250_mux.c  adac250_pll.c  adac250_serialize.c
Nutaq/bas/sdk/embedded/lib/adc5000_lib/inc/: ad9517.h  ad9517_defines.h  ad9517_regs.h  adc5000.h  adc5000_common.h  adc5000_cpld_regs.h  adc5000_defines.h  adc5000_serialize.h  adt7411.h  adt7411_defines.h  adt7411_regs.h  com_wrapper.h  com_wrapper_defines.h  ev10aq190.h  ev10aq190_defines.h  ev10aq190_regs.h
Nutaq/bas/sdk/embedded/lib/adc5000_lib/prj/: Makefile
Nutaq/bas/sdk/embedded/lib/adc5000_lib/src/: ad9517.c  adc5000.c  adc5000_serialize.c  adt7411.c  com_wrapper.c  ev10aq190.c
Nutaq/bas/sdk/embedded/lib/aurora_lib/inc/: aurora.h  aurora_defines.h  aurora_regs.h
Nutaq/bas/sdk/embedded/lib/aurora_lib/prj/: Makefile
Nutaq/bas/sdk/embedded/lib/aurora_lib/src/: aurora.c
Nutaq/bas/sdk/embedded/lib/carrier_lib/inc/: carrier_fmc_service.h  carrier_fmc_service_def.h  carrier_internal_def.h  carrier_service.h  carrier_service_def.h
Nutaq/bas/sdk/embedded/lib/carrier_lib/prj/: Makefile
Nutaq/bas/sdk/embedded/lib/carrier_lib/src/: carrier_fmc_service.c  carrier_service.c
Nutaq/bas/sdk/embedded/lib/common/inc/: bas_types.h  media_types.h
Nutaq/bas/sdk/host/api/eapi/prj_linux/: Makefile.am  bootstrap.sh  build.sh  build_cli.sh  build_eapi.sh  configure.ac  cross.sh  generate.sh
Nutaq/bas/sdk/host/cli/src/: adac250_cli.py  adac250_commander.py  adc5000_cli.py  adc5000_commander.py  aurora_cli.py  aurora_commander.py  backplane_cli.py  backplane_commander.py  bas_cli.py  bas_commander.py  bas_exception.py  cli_parser.py  eapi.py  fmclvds_cli.py  fmclvds_commander.py  fmcradio_cli.py  fmcradio_commander.py  fmcradio_help.py  lvds_cli.py  lvds_commander.py  mi125_cli.py  mi125_commander.py  mi250_cli.py  mi250_commander.py  mo1000_cli.py  mo1000_commander.py  osconfig_cli.py  perseus_cli.py  perseus_commander.py  perseus_serial_cli.py  perseus_serial_commander.py  ppssync_cli.py  ppssync_commander.py  rtdex_recplay_cli.py  sysmon_cli.py  sysmon_commander.py  timestamp_cli.py  update_cli.py  update_commander.py
Nutaq/bas/sdk/host/cli/swig/: EAPI_Python.vcxproj  eapi.i
Nutaq/bas/sdk/host/gnuradio/gr-nutaq/: CMakeLists.txt  LaunchGNURadioCompanion.sh  compile.sh  install.sh
Nutaq/bas/sdk/host/gnuradio/gr-nutaq/lib/: CMakeLists.txt  adac250_impl.cc  adac250_impl.h  carrier.cc  carrier_perseus_impl.cc  carrier_perseus_impl.h  carrier_zedboard_impl.cc  carrier_zedboard_impl.h  custom_register_impl.cc  custom_register_impl.h  delay_counter.cc  delay_counter.h  generic_register_impl.cc  generic_register_impl.h  nutaq_api.cc  nutaq_api.h  nutaq_cb.cc  playback_impl.cc  playback_impl.h  qa_nutaq.cc  qa_nutaq.h  radio420_rx_impl.cc  radio420_rx_impl.h  radio420_tx_impl.cc  radio420_tx_impl.h  rtdex.cc  rtdex_sink_impl.cc  rtdex_sink_impl.h  rtdex_source_impl.cc  rtdex_source_impl.h  test_nutaq.cc
Nutaq/bas/sdk/host/gnuradio/gr-nutaq/swig/: CMakeLists.txt  nutaq_swig.i
Nutaq/bas/sdk/host/lib64/: libeapi.la  libeapi.so.0.0.0  librecplay.la  librecplay.so.0.0.0  librtdex.la  librtdex.so.0.0.0  librtdexsync.la  librtdexsync.so.0  librtdexsync.so.0.0.0  librtdexts.la  librtdexts.so.0  librtdexts.so.0.0.0
Nutaq/bas/sdk/host/pcie/inc/: perseus2hostregs.h  rtdex_pcie.h  rtdexpcie_drviface.h
Nutaq/bas/sdk/host/pcie/src/: rtdex_pcie.c
Nutaq/bas/tools/support/script/: PerseusFirmwareUpdate.sh
(+1386 files in other folders)
